# proas

./: .gitignore  Makefile.am  README  autogen.sh  cambcoor.f  chlower.f  configure.ac  create_proas  decimal.f  dibuhoja.f  dibuobje.f  gnu-public-license.txt  manual.ps  observat.f  orcaso.f  proas.f  readi.f  readilim.f  rmblank.f  sexag.f  truebeg.f
docs/: Makefile  conf.py  index.rst  installation.rst  introduction.rst  running.rst
m4/: pgplot.m4
src/: Makefile.am  cambcoor.f  chlower.f  decimal.f  dibuhoja.f  dibuobje.f  endprogram.f  fj_ts0.f  lrunx.f  observat.f  orcaso.f  possol.f  proas.f  proas.inc  ranred.f  ranred_.c  readc.f  readf.f  readi.f  readilim.f  rmblank.f  sexag.f  tiempou.f  traspasa.f  truebeg.f  truelen.f  version.inc.in
