## Process this file with automake to produce Makefile.in

bin_PROGRAMS = proas
proas_SOURCES = cambcoor.f chlower.f decimal.f dibuhoja.f dibuobje.f \
endprogram.f fj_ts0.f lrunx.f observat.f orcaso.f possol.f proas.f \
ranred.f readc.f readf.f readi.f readilim.f rmblank.f sexag.f \
tiempou.f traspasa.f truebeg.f truelen.f version.inc

LDADD =  $(PGPLOT_LIBS)

EXTRA_DIST = proas.inc
